# m5rcode

./: .SRCINFO  .gitignore  BUILD_SUMMARY.md  CHANGELOG_v0.3.2.md  CONTRIBUTING.md  Cargo.toml  DISTRIBUTION_READY.md  ENHANCEMENT_PLAN.md  ENHANCEMENT_REPORT.md  LICENSE  PKGBUILD  README.md  RELEASE_v0.3.0.md  SECURITY.md  m5discord  m5rcode  test.m5  test_v03.m5
SPEC/: grammar.ebnf  language_overview.md  semantics.md  stdlib_spec.md  typing_spec.md
arch/: .SRCINFO  AUR_SUBMISSION.md  PKGBUILD  m5rcode.install
ci/: arch-ci.yml
compiler/: Cargo.toml
compiler/src/: ast.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs
docs/: LSP_SETUP.md  api_reference.md  examples.md  new_features_examples.md  tutorial.md
examples/discord/: MODBOT_README.md  MODBOT_V2_README.md  bot.m5  bot_config.json  modbot.m5  modbot_pro.m5  modbot_v2.m5  modbot_working.m5  my_bot.m5  simple_bot.m5  test_cmd.m5  test_cmd2.m5  test_cmd3.m5  test_concat.m5  test_debug.m5  test_debug2.m5  test_global.m5  test_main.m5  test_simple.m5
examples/discord/handlers/: calc.m5  (+5 more)
runtime/: Cargo.toml
runtime/discord/: Cargo.toml
runtime/discord/src/: main.rs
runtime/src/: gc.rs  lib.rs
scripts/: bootstrap.sh  build_arch.sh  make_release.sh  prepare_aur.sh  setup_kate_lsp.sh  verify.sh
stdlib/: discord.m5
stdlib/discord/: README.md  api.m5  client.m5  core.m5
tests/integration/: runtime_tests.m5
tests/unit/: interpreter_tests.m5  parser_tests.m5
tools/: m5discord  m5discord.sh  m5fmt.rs  m5lint.rs
tools/lsp/: Cargo.toml
tools/m5idle/: Cargo.toml
tools/m5repl/: Cargo.toml
(+3 files in other folders)
